# wgputris

./: Cargo.toml
src/: draw.rs  game.rs  key.rs  lib.rs  main.rs  rend.rs  styling.rs  time.rs
src/game/: point.rs
src/rend/: layer.rs  quad_layer.rs  text_layer.rs
src/shaders/: quad.wgsl
