[package]
name = "wgputris"
version = "0.0.1"
edition = "2021"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
atomic_enum = "0.3"
bytemuck = "1.21"
dashmap = "6.1"
dark-light = "2.0"
env_logger = "0.11"
indexmap = "2.7"
log = "0.4"
pollster = "0.4"
rand = "0.9"
rand_xoshiro = "0.7"
# spin_sleep = "1.3"
wgpu = "24.0"
winit = { version = "0.30" }
